Added responsive splitview

--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
 				<li><a href="snippets/collapsible-sets.html">Collapsible Sets</a></li>
 				<li><a href="snippets/forms.html">Form Elements</a></li>
 				<li><a href="snippets/lists.html">List Views</a></li>
+				<li><a href="splitview.html" data-ajax="false">Responsive Split Views</a></li>
 			</ul>
 
 		</div>
 		
 		<div data-role="footer" data-theme="c">
-			<p>&copy; 2012 - jQuery Mobile starter</p>
+			<h4>&copy; 2012 - jQuery Mobile starter</h4>
 		</div>	
 
 
