--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
 	<link rel="stylesheet"  href="css/jquery.mobile.structure.css" />
 	<link rel="stylesheet" href="css/jquery.mobile.theme.css" />
+	<link rel="stylesheet" href="css/fluid960.css" />
 	<link rel="stylesheet" href="css/application.css" />
 	<script>
 		var userAgent = navigator.userAgent + '';
@@ -37,13 +38,14 @@
 		<div data-role="content">
 			<ul data-role="listview" data-inset="true" data-theme="c" data-dividertheme="b">
 				<li data-role="list-divider">Snippet Pages</li>
-				<li><a href="snippets/buttons.html">Buttons</a></li>
+				<li><a href="snippets/buttons.html" data-transition="slide">Buttons</a></li>
 				<li><a href="snippets/grids.html">Grids</a></li>
+				<li><a href="snippets/gridsfluid.html">Fluid 960 Gruids</a></li>
 				<li><a href="snippets/collapsibles.html" transition="slide">Collapsible Boxes</a></li>
 				<li><a href="snippets/collapsible-sets.html">Collapsible Sets</a></li>
 				<li><a href="snippets/forms.html">Form Elements</a></li>
 				<li><a href="snippets/lists.html">List Views</a></li>
-				<li><a href="splitview.html" data-ajax="false">Split Views</a></li>
+				<li><a href="snippets/split.html" data-ajax="false">Split Views</a></li>
 			</ul>
 		</div>
 		<div data-role="footer" data-theme="c">
