--- a/splitview.html
+++ b/splitview.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
 	<link rel="stylesheet"  href="css/jquery.mobile.structure.css" />
 	<link rel="stylesheet" href="css/jquery.mobile.theme.css" />
+	<link rel="stylesheet" href="css/grids.css" />
 	<link rel="stylesheet" href="css/splitview.css" />
 	<link rel="stylesheet" href="css/application.css" />
 	<script>
@@ -29,7 +30,8 @@
 	<script src="js/app/app.js"></script>
 	<script src="js/app/bootstrap.js"></script>
 	<script src="js/lib/jquery.splitview.js"></script>
-	<script src="js/lib/jquery.mobile.js"></script>
+	<!--	slightly modified version of jquery mobile code for splitview...	-->
+	<script src="js/lib/jquery.mobilesp.js"></script>
 </head>
 <body>
 	<div data-role="panel" data-id="menu" data-hash="crumbs" data-context="a#default">
