--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
 	<link rel="stylesheet"  href="css/jquery.mobile.structure.css" />
 	<link rel="stylesheet" href="css/jquery.mobile.theme.css" />
+	<link rel="stylesheet" href="css/jqm-icon-pack-2.1.2-fa.css" />
 	<link rel="stylesheet" href="css/fluid960.css" />
 	<link rel="stylesheet" href="css/application.css" />
 	<script>
@@ -41,6 +42,7 @@
 				<li><a href="snippets/buttons.html" data-transition="slide">Buttons</a></li>
 				<li><a href="snippets/grids.html">Grids</a></li>
 				<li><a href="snippets/gridsfluid.html">Fluid 960 Gruids</a></li>
+				<li><a href="snippets/icons.html">Icons</a></li>
 				<li><a href="snippets/collapsibles.html" transition="slide">Collapsible Boxes</a></li>
 				<li><a href="snippets/collapsible-sets.html">Collapsible Sets</a></li>
 				<li><a href="snippets/forms.html">Form Elements</a></li>
