Updated jQuery Mobile to 1.3

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 				<li><a href="snippets/collapsible-sets.html">Collapsible Sets</a></li>
 				<li><a href="snippets/forms.html">Form Elements</a></li>
 				<li><a href="snippets/lists.html">List Views</a></li>
-				<li><a href="snippets/split.html" data-ajax="false">Split Views</a></li>
+				<li><a href="splitview.html" data-ajax="false">Split Views</a></li>
 			</ul>
 		</div>
 		<div data-role="footer" data-theme="c">
-			<h4>&copy; 2012 - jQuery Mobile starter</h4>
+			<h4>&copy; 2013 - jQuery Mobile starter</h4>
 		</div>	
 	</div><!-- /page -->
 </body>
