added datastore - store.js

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		}
 	</script>
 	<script src="js/lib/jquery.js"></script>
+	<script src="js/lib/store.js"></script>
 	<!-- your scripts here -->
 	<script src="js/app/app.js"></script>
 	<script src="js/app/bootstrap.js"></script>
@@ -48,6 +49,7 @@
 				<li><a href="snippets/forms.html">Form Elements</a></li>
 				<li><a href="snippets/lists.html">List Views</a></li>
 				<li><a href="splitview.html" data-ajax="false">Split Views</a></li>
+				<li><a href="store_todo.html" data-ajax="false">Example of using Store</a></li>
 			</ul>
 		</div>
 		<div data-role="footer" data-theme="c">
