--- a/store_todo.html
+++ b/store_todo.html
@@ -3,8 +3,7 @@
 	<body>
 		<h1>Todo List</h1>
 		<form id="todo_form" method="post" accept-charset="utf-8">
-			<p><input type="text" name="todo_field" value="" id="todo_field" /></p>
-			<p><input type="submit" value="Create Todo" /></p>
+			<p><input type="text" name="todo_field" value="" id="todo_field" /><input type="submit" value="Create Todo" /></p>
 		</form>
 		<p>You have <span id="todo_count">?</span> todos remaining.</p>
 		<div id="todo_list_wrapper"></div>
