--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		}
 	</script>
 	<script src="js/lib/jquery.js"></script>
-	<script src="js/lib/boutique.js"></script>
+	<script src="js/lib/store.js"></script>
 	<!-- your scripts here -->
 	<script src="js/app/app.js"></script>
 	<script src="js/app/bootstrap.js"></script>
