--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
   <script src="./js/app/bootstrap.js"></script>
   <script src="./js/lib/jquery.mobile.js"></script>
 
+  <style type="text/css">
+.ui-li .ui-btn-inner a.ui-link-inherit, .ui-li-static.ui-li {
+    display: block !important;
+    padding: 0.9em 75px 0.9em 15px !important;
+}
+div.ui-slider-switch {
+    position: absolute !important;
+    right: 0 !important;
+    width: 25% !important;
+    margin-top:5px !important;
+}
+
+  </style>
+
+
 </head> 
 <body> 
 	<div data-role="page">
@@ -50,14 +65,28 @@
 
 	<div data-role="fieldcontain">
 		<label for="slider">Living room lamp:</label>
-		<select name="slider" id="slider" data-role="slider" mac="xx">
+		<select name="slider" id="slider" class="slider" data-role="slider" mac="xx">
+			<option value="off">Off</option>
+			<option value="on">On</option>
+		</select>
+	</div>
+	<div data-role="fieldcontain">
+		<label for="slider">Living room lamp:</label>
+		<select name="slider" id="slider" class="slider" data-role="slider" mac="xx">
+			<option value="off">Off</option>
+			<option value="on">On</option>
+		</select>
+	</div>
+	<div data-role="fieldcontain">
+		<label for="slider">Living room lamp:</label>
+		<select name="slider" id="slider" class="slider" data-role="slider" mac="xx">
 			<option value="off">Off</option>
 			<option value="on">On</option>
 		</select>
 	</div>
 
-		
-		
+
+
 	</div>
 </body>
 </html>
