--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@ div.ui-slider-switch {
 
 	<div data-role="fieldcontain">
 		<label for="slider">Living room lamp:</label>
-		<select name="slider" id="slider" class="slider" data-role="slider" mac="xx">
+		<select name="slider" id="slider" class="slider" data-role="slider" device="livingroomlamp">
 			<option value="off">Off</option>
 			<option value="on">On</option>
 		</select>
 	</div>
 	<div data-role="fieldcontain">
 		<label for="slider">Living room lamp:</label>
-		<select name="slider" id="slider" class="slider" data-role="slider" mac="xx">
+		<select name="slider" id="slider" class="slider" data-role="slider" device="livingroomlamp2">
 			<option value="off">Off</option>
 			<option value="on">On</option>
 		</select>
 	</div>
 	<div data-role="fieldcontain">
 		<label for="slider">Living room lamp:</label>
-		<select name="slider" id="slider" class="slider" data-role="slider" mac="xx">
+		<select name="slider" id="slider" class="slider" data-role="slider" device="livingroomlamp3">
 			<option value="off">Off</option>
 			<option value="on">On</option>
 		</select>
