--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@ div.ui-slider-switch {
     margin-top:5px !important;
 }
 
+.ui-field-contain {
+	margin:0 !important;
+	padding:8px !important;
+}
+
   </style>
 
 
