--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ div.ui-slider-switch {
 
 		<div data-role="header">
 			<h1>Home Control</h1>
+			<a href="#" id="refreshStatus" data-icon="refresh" style="float:right !important;">Refresh</a>
 		</div>
 
 		<div data-role="content">
