--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ div.ui-slider-switch {
 
 		<div data-role="header">
 			<h1>Home Control</h1>
-			<a href="#" id="refreshStatus" data-icon="refresh" style="float:right !important;">Refresh</a>
+			<a href="#" id="refresh" data-icon="refresh" style="background:url(css/themes/default/images/icons-png/refresh-black.png) no-repeat !important; background-position:9px 10px !important;">Refresh</a>
 		</div>
 
 		<div data-role="content">
