--- a/index.html
+++ b/index.html
@@ -76,19 +76,57 @@ div.ui-slider-switch {
 		</select>
 	</div>
 	<div data-role="fieldcontain">
-		<label for="slider">Living room lamp:</label>
-		<select name="slider" id="slider" class="slider" data-role="slider" device="livingroomlamp2">
+		<label for="slider">Kitchen surround:</label>
+		<select name="slider" id="slider" class="slider" data-role="slider" device="kitchensurround">
 			<option value="off">Off</option>
 			<option value="on">On</option>
 		</select>
 	</div>
 	<div data-role="fieldcontain">
-		<label for="slider">Living room lamp:</label>
-		<select name="slider" id="slider" class="slider" data-role="slider" device="livingroomlamp3">
+		<label for="slider">Kitchen countertop:</label>
+		<select name="slider" id="slider" class="slider" data-role="slider" device="kitchencountertop">
 			<option value="off">Off</option>
 			<option value="on">On</option>
 		</select>
 	</div>
+	<div data-role="fieldcontain">
+		<label for="slider">Basement lights:</label>
+		<select name="slider" id="slider" class="slider" data-role="slider" device="basementlights">
+			<option value="off">Off</option>
+			<option value="on">On</option>
+		</select>
+	</div>
+	<div data-role="fieldcontain">
+		<label for="slider">Conservatory fan:</label>
+		<select name="slider" id="slider" class="slider" data-role="slider" device="conservatoryfan">
+			<option value="off">Off</option>
+			<option value="on">On</option>
+		</select>
+	</div>
+	<div data-role="fieldcontain">
+		<label for="slider">Basement fan:</label>
+		<select name="slider" id="slider" class="slider" data-role="slider" device="basementfan">
+			<option value="off">Off</option>
+			<option value="on">On</option>
+		</select>
+	</div>
+	<div data-role="fieldcontain">
+		<label for="slider">Heated bed:</label>
+		<select name="slider" id="slider" class="slider" data-role="slider" device="heatedbed">
+			<option value="off">Off</option>
+			<option value="on">On</option>
+		</select>
+	</div>
+	<div data-role="fieldcontain">
+		<label for="slider">Spare:</label>
+		<select name="slider" id="slider" class="slider" data-role="slider" device="spare">
+			<option value="off">Off</option>
+			<option value="on">On</option>
+		</select>
+	</div>
+
+
+
 
 
 
