--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ div.ui-slider-switch {
 
 		<div data-role="header">
 			<h1>Home Control</h1>
+			<a href="#" id="quit">Quit</a>
 		</div>
 
 		<div data-role="content">
@@ -83,8 +84,8 @@ div.ui-slider-switch {
 		</select>
 	</div>
 	<div data-role="fieldcontain">
-		<label for="slider">Kitchen countertop:</label>
-		<select name="slider" id="slider" class="slider" data-role="slider" device="kitchencountertop">
+		<label for="slider">Kitchen counter:</label>
+		<select name="slider" id="slider" class="slider" data-role="slider" device="kitchencounter">
 			<option value="off">Off</option>
 			<option value="on">On</option>
 		</select>
